Correção de menu

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <nav>
             <li><a href="#">Home</a>
             <li><a href="#">Notícias</a>
-            <li><a href="#">Curiosidades</a>
-            <li><a href="#">Fale Conosco</a>
+            <li><a href="#">Contato</a>
         </nav>
     <main>
         <article>
